test/fail/pipe-absent-nullary.mo
func f0() {};

() |> f0 (); // no hole, syntax error

